(include_subdirs unqualified)

(library
 (name tylr_core)
 (virtual_modules sort grammar)
 (libraries util sedlex re sexplib uutf core fmt)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps
   ppx_let
   ppx_sexp_conv
   ppx_yojson_conv
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving_hash
   sedlex.ppx)))

(rule
 (write-file
  js-of-ocaml-flags-dev
  "(:standard --debug-info --no-inline --pretty --source-map)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
