(include_subdirs unqualified)

(library
 (name tylr_core)
 (virtual_modules sort grammar)
 (libraries stds sedlex re sexplib uutf fmt)
 (js_of_ocaml)
 (preprocess
  (pps
   ppx_let
   ppx_sexp_conv
   ppx_yojson_conv
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving_hash
   sedlex.ppx)))

(env
 (dev
  (js_of_ocaml
   (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap)))
 (release
  (js_of_ocaml
   (flags :standard))))
