(library
 (name stds)
 (libraries base core ptmap uutf sexplib fmt)
 (js_of_ocaml)
 (preprocess
  (pps
   ppx_let
   ppx_sexp_conv
   ppx_deriving.ord
   ppx_deriving_hash
   ppx_deriving.show
   ppx_yojson_conv)))

(env
 (dev
  (js_of_ocaml
   (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap)))
 (release
  (js_of_ocaml
   (flags :standard))))
