(include_subdirs unqualified)

(library
 (name tylr_web)
 (modules :standard \ Main)
 (libraries incr_dom util tylr_core)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps
   ppx_yojson_conv
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show)))

(executable
 (name main)
 (modules Main)
 (libraries tylr_web tylr_hazel)
 (modes js)
 (js_of_ocaml
  (flags
   (:include js-of-ocaml-flags-%{profile})))
 (preprocess
  (pps
   ppx_yojson_conv
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show)))

(rule
 (write-file js-of-ocaml-flags-dev "(:standard)"))

(rule
 (write-file js-of-ocaml-flags-release "(:standard)"))
