(include_subdirs qualified)

(library
 (name tylr_web)
 (modules :standard \ Main)
 (libraries incr_dom stds tylr_core)
 (js_of_ocaml)
 (preprocess
  (pps
   ppx_yojson_conv
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show)))

(executable
 (name main)
 (modules Main)
 (libraries tylr_web tylr_hazel core)
 (modes js)
 (js_of_ocaml)
 (preprocess
  (pps
   ppx_yojson_conv
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show)))

(env
 (dev
  (js_of_ocaml
   (flags :standard --debuginfo --noinline --dynlink --linkall --sourcemap)))
 (release
  (js_of_ocaml
   (flags :standard))))
