; (include_subdirs unqualified)

; (library
;  (name view)
;  (libraries incr_dom stds tylr_core util)
;  (js_of_ocaml
;   (flags
;    (:include js-of-ocaml-flags-%{profile})))
;  (preprocess
;   (pps
;    ppx_yojson_conv
;    js_of_ocaml-ppx
;    ppx_let
;    ppx_sexp_conv
;    ppx_deriving.show)))

; (rule
;  (write-file
;   js-of-ocaml-flags-dev
;   "(:standard --debug-info --no-inline --pretty --source-map)"))

; (rule
;  (write-file js-of-ocaml-flags-release "(:standard)"))
