(rule
 (copy ../main.bc.js tiles.js))

; I'd just keep these files in current directory and omit these rules
; but for some reason dune isn't copying them over to _build, and
; explicit copy rule requires copying from a different directory

(rule
 (copy ../index.html index.html))

(rule
 (copy ../style.css style.css))

(rule
 (copy ../fonts/SourceCodePro-Black.otf.woff2 SourceCodePro-Black.otf.woff2))

(rule
 (copy ../fonts/SourceCodePro-Bold.otf.woff2 SourceCodePro-Bold.otf.woff2))

(rule
 (copy
  ../fonts/SourceCodePro-Regular.otf.woff2
  SourceCodePro-Regular.otf.woff2))
